fixed spacing in footer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,6 +43,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-size: 0.8em;
 }
 
 .footer img {
